Fix contact page zoom on mobile

--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -4,7 +4,7 @@
     justify-content : center;
     margin          : auto;
     margin-top      : 10px;
-    width           : 400px;
+    max-width       : 400px;
     text-align      : center;
     background-color: rgba(0, 0, 0, 0.665);
     @include rounded-shadow-border;
@@ -21,6 +21,6 @@
     }
 
     @media screen and (max-device-width: 800px) {
-        zoom: 75%;
+        transform: scale(0.75);
     }
 }
